--- a/Books/alexander/pages/page8.html
+++ b/Books/alexander/pages/page8.html
@@ -4,6 +4,6 @@
 <p>It was nothing special to look at. A metal box, blast doors closed, call panel blinking a tired green.</p>
 <p>Most people in my block had never been this close to it. You needed the right kind of plastic around your neck to get within conversation distance. Or the right kind of job. Or the wrong kind of ideas.</p>
 <p>Eight armored figures stood around it, spread in a loose arc.</p>
-<p>74’s.</p>
+<p>[[codex:fac-pd74|74&#x27;s.]]</p>
 <p>I’d grown up with posters of them: the heroes of the Safe Zone, standing in front of the walls with projectors firing behind them, monsters in silhouette. In real life they just looked tired. Heavy armor, matte and scarred. Full helmets with opaque visors. Rifles held in practiced rests.</p>
 </article>
