Revamp wiki landing experience

--- a/codex.html
+++ b/codex.html
@@ -6,8 +6,8 @@
 
   <link rel="stylesheet" href="styles.css" />
   <script src="theme-loader.js"></script>
-  <link rel="stylesheet" href="overlays.css" />
-  <script src="overlays.js"></script>
+  <link rel="stylesheet" href="overlay.css" />
+  <script src="overlay.js"></script>
   <style>
     body {
       margin: 0;
